# actingwebdemo

./: .gitignore  CHANGELOG.rst  CHANGELOG.txt  CLAUDE.md  Dockerfile  Dockerrun.aws.json  LICENSE  LICENSE.rst  LICENSE.txt  Makefile  OAUTH_SETUP.rst  Pipfile  README.md  README.rst  README.txt  actingweb-spec-md.txt  actingweb-spec.rst  app.yaml  application-old.py  application.py  aw-actor-callbacks.py  aw-actor-deleted.html  aw-actor-meta.py  aw-actor-meta.xml  aw-actor-oauth.py  aw-actor-properties.py  aw-actor-root.py  aw-actor-subscription.py  aw-actor-trust.py  aw-actor-www-root.html  aw-actor-www.py  aw-callback-oauth.py  aw-devtest.py  aw-root-factory.html  aw-root-factory.py  bitbucket-pipelines.yml  conf.py  developer.rst  docker-compose-local.yml  docker-compose.yml  (+20 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.ebextensions/: options.config  securelistener.config
.elasticbeanstalk/: config.yml
actingweb/: __init__.py  actor.py  auth.py  aw_proxy.py  config.py  oauth.py  peer.py  peertrustee.py  property.py  subscription.py  trust.py
aw-raml/: api.raml
aw_handlers/: __init__.py  actor_callbacks.py  actor_meta.py  actor_oauth.py  actor_properties.py  actor_resources.py  actor_root.py  actor_subscription.py  actor_trust.py  actor_www.py  bot.py  bots.py  callback_oauth.py  devtest.py  root_factory.py  test_factory.py
docs/: conf.py  index.rst
on_aw/: __init__.py  on_aw_bot.py  on_aw_callbacks.py  on_aw_delete.py  on_aw_oauth.py  on_aw_resources.py  on_aw_www_paths.py
shared_hooks/: __init__.py  action_hooks.py  callback_hooks.py  lifecycle_hooks.py  method_hooks.py  property_hooks.py  trust_hooks.py
shared_mcp/: __init__.py  helpers.py  prompts.py  tools.py
static/: style.css
(+34 files in other folders)
