[tool.poetry]
package-mode = false
name = "actingwebdemo"
version = "0.1.0"
description = "ActingWeb Demo Application"
authors = ["Greger Wedel <greger@greger.io>"]
readme = "README.rst"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = ">=3.1.2"
flask = ">=2.3.0,<4.0.0"
uwsgi = ">=2.0.23"
#actingweb = ">=3.0.0"
actingweb = { path = "../actingweb", develop = true }

[tool.poetry.group.dev.dependencies]
pydevd-pycharm = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://demo.actingweb.io"
"Repository" = "https://github.com/gregertw/actingwebdemo"
