[tool.poetry]
package-mode = false
name = "actingwebdemo"
version = "0.1.0"
description = "ActingWeb Demo Application"
authors = ["Greger Wedel <greger@greger.io>"]
readme = "README.rst"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = ">=3.1.2"
flask = ">=3.1.1,<4.0.0"
uwsgi = ">=2.0.23"
actingweb = { version = ">=3.7.2", extras = ["flask"] }
#actingweb = { path = "../actingweb", develop = true, extras = ["flask"] }
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pydevd-pycharm = "*"
ruff = "^0.14.10"
pyright = "^1.1.407"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://demo.actingweb.io"
"Repository" = "https://github.com/gregertw/actingwebdemo"
